// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio test should errored with disabled classes 1`] = `
<div>
  <label
    class="sc-eDvSVe cIHxS"
  >
    <div
      class="sc-jSUZER AlNEP"
    >
      <input
        class="peer hidden"
        type="radio"
        value=""
      />
      <div
        class="sc-gKPRtg cKVZem"
      />
      <div
        class="sc-iBYQkv gyVbu"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="3"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Radio test should render 1`] = `
<div>
  <label
    class="sc-eDvSVe cIHxS"
  >
    <div
      class="sc-jSUZER lktFsw"
    >
      <input
        class="peer hidden"
        type="radio"
        value=""
      />
      <div
        class="sc-gKPRtg bwiDRa"
      />
      <div
        class="sc-iBYQkv gvhRVZ"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="3"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Radio test should render with disabled classes 1`] = `
<div>
  <label
    class="sc-eDvSVe ZXIxN"
    disabled=""
  >
    <div
      class="sc-jSUZER lktFsw"
    >
      <input
        class="peer hidden"
        disabled=""
        type="radio"
        value=""
      />
      <div
        class="sc-gKPRtg hUqRem"
        disabled=""
      />
      <div
        class="sc-iBYQkv fSQQZm"
        disabled=""
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="3"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;
